examples/negative/patterns/pattern_duplicate_binding.kai
# Silent contract (#520 audit, category 2 / patterns): a pattern
# introduces the same binding name twice. Per ML/Haskell-family
# convention this is a parser/resolver error — the second `x`
# would shadow the first within the same pattern with no
# observable equality check. kaikai accepts and warns about
# unused bindings instead. Should be a hard error.
#
# See examples/negative/silent_contract/README.md for follow-up.

type Pair = MkPair(Int, Int)

fn f(p: Pair) : Int = match p {
  MkPair(x, x) -> x
}

fn main() : Int = f(MkPair(1, 2))
